mapping full serieNumber from Brage (#1664)
* mapping full serieNumber from Brage

* moving seriesNumber scraping til brage-migration